third_party/move/move-compiler-v2/tests/checking/typing/binary_sub_invalid.exp

Diagnostics:
error: no matching declaration of `-`
  ┌─ tests/checking/typing/binary_sub_invalid.move:8:9
  │
8 │         false - true;
  │         ^^^^^^^^^^^^
  │
  = outruled candidate `-<T>(T, T): T` (cannot use `bool` with an operator which expects a value of type `integer`)
  = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
  ┌─ tests/checking/typing/binary_sub_invalid.move:9:9
  │
9 │         1 - false;
  │         ^^^^^^^^^
  │
  = outruled candidate `-<T>(T, T): T` (cannot use `bool` with an operator which expects a value of type `integer`)
  = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:10:9
   │
10 │         false - 1;
   │         ^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `bool` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:11:9
   │
11 │         @0x0 - @0x1;
   │         ^^^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `address` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:12:9
   │
12 │         (0: u8) - (1: u128);
   │         ^^^^^^^^^^^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `u128` with an operator which expects a value of type `u8`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:13:9
   │
13 │         r - r;
   │         ^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `R` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:14:9
   │
14 │         s - s;
   │         ^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `S` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:15:9
   │
15 │         1 - false - @0x0 - 0;
   │         ^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `bool` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:15:9
   │
15 │         1 - false - @0x0 - 0;
   │         ^^^^^^^^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `address` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:16:9
   │
16 │         () - ();
   │         ^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `()` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:17:9
   │
17 │         1 - ();
   │         ^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `()` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:18:9
   │
18 │         (0, 1) - (0, 1, 2);
   │         ^^^^^^^^^^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `(integer, integer)` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)

error: no matching declaration of `-`
   ┌─ tests/checking/typing/binary_sub_invalid.move:19:9
   │
19 │         (1, 2) - (0, 1);
   │         ^^^^^^^^^^^^^^^
   │
   = outruled candidate `-<T>(T, T): T` (cannot use `(integer, integer)` with an operator which expects a value of type `integer`)
   = outruled candidate `-<T>(T): T` (the function takes 1 argument but 2 were provided)
